// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`createProject > createProject 1`] = `
[
  ".editorconfig",
  ".gitignore",
  ".vscode/settings.json",
  "package.json",
  "project.config.json",
  "project.private.config.json",
  "public/logo.png",
  "README.md",
  "src/app.json",
  "src/app.scss",
  "src/app.ts",
  "src/components/HelloWorld/HelloWorld.json",
  "src/components/HelloWorld/HelloWorld.scss",
  "src/components/HelloWorld/HelloWorld.ts",
  "src/components/HelloWorld/HelloWorld.wxml",
  "src/pages/index/index.json",
  "src/pages/index/index.scss",
  "src/pages/index/index.ts",
  "src/pages/index/index.wxml",
  "src/sitemap.json",
  "src/theme.json",
  "src/utils/util.ts",
  "src/vite-env.d.ts",
  "tsconfig.app.json",
  "tsconfig.json",
  "tsconfig.node.json",
  "vite.config.ts",
]
`;

exports[`createProject > createProject tailwindcss 1`] = `
[
  ".editorconfig",
  ".gitignore",
  ".vscode/settings.json",
  "package.json",
  "postcss.config.js",
  "project.config.json",
  "project.private.config.json",
  "public/icon0.png",
  "public/icon0s.png",
  "public/icon1.png",
  "public/icon1s.png",
  "public/logo.png",
  "README.md",
  "src/app.json",
  "src/app.scss",
  "src/app.ts",
  "src/components/HelloWorld/HelloWorld.json",
  "src/components/HelloWorld/HelloWorld.scss",
  "src/components/HelloWorld/HelloWorld.ts",
  "src/components/HelloWorld/HelloWorld.wxml",
  "src/pages/index/index.json",
  "src/pages/index/index.scss",
  "src/pages/index/index.ts",
  "src/pages/index/index.wxml",
  "src/pages/profile/index.json",
  "src/pages/profile/index.scss",
  "src/pages/profile/index.ts",
  "src/pages/profile/index.wxml",
  "src/sitemap.json",
  "src/theme.json",
  "src/utils/util.ts",
  "src/vite-env.d.ts",
  "tailwind.config.ts",
  "tsconfig.app.json",
  "tsconfig.json",
  "tsconfig.node.json",
  "vite.config.ts",
]
`;

exports[`createProject > createProject tdesign 1`] = `
[
  ".editorconfig",
  ".gitignore",
  ".vscode/settings.json",
  "package.json",
  "postcss.config.js",
  "project.config.json",
  "project.private.config.json",
  "public/logo.png",
  "README.md",
  "src/app.json",
  "src/app.scss",
  "src/app.ts",
  "src/components/HelloWorld/HelloWorld.json",
  "src/components/HelloWorld/HelloWorld.scss",
  "src/components/HelloWorld/HelloWorld.ts",
  "src/components/HelloWorld/HelloWorld.wxml",
  "src/pages/index/index.json",
  "src/pages/index/index.scss",
  "src/pages/index/index.ts",
  "src/pages/index/index.wxml",
  "src/sitemap.json",
  "src/theme.json",
  "src/utils/util.ts",
  "src/vite-env.d.ts",
  "tailwind.config.ts",
  "tsconfig.app.json",
  "tsconfig.json",
  "tsconfig.node.json",
  "vite.config.ts",
]
`;

exports[`createProject > createProject vant 1`] = `
[
  ".editorconfig",
  ".gitignore",
  ".vscode/settings.json",
  "package.json",
  "postcss.config.js",
  "project.config.json",
  "project.private.config.json",
  "public/logo.png",
  "README.md",
  "src/app.json",
  "src/app.scss",
  "src/app.ts",
  "src/components/HelloWorld/HelloWorld.json",
  "src/components/HelloWorld/HelloWorld.scss",
  "src/components/HelloWorld/HelloWorld.ts",
  "src/components/HelloWorld/HelloWorld.wxml",
  "src/pages/index/index.json",
  "src/pages/index/index.scss",
  "src/pages/index/index.ts",
  "src/pages/index/index.wxml",
  "src/sitemap.json",
  "src/theme.json",
  "src/utils/util.ts",
  "src/vite-env.d.ts",
  "tailwind.config.ts",
  "tsconfig.app.json",
  "tsconfig.json",
  "tsconfig.node.json",
  "vite.config.ts",
]
`;
